--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/css-sheet.css"/>
-    <link rel="stylesheet" href="css/_media.css"/>
+    <link rel="stylesheet" href="css/media.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="stylesheet" href="css/hover-min.css"/>
     <!--fonts-->
